# claude-swarm

./: .gitignore  CLAUDE.md  DESIGN_DECISIONS.md  README.md  VISION.md  pyproject.toml
src/claude_swarm/: __init__.py  cli.py  config.py  coordination.py  dashboard.py  errors.py  github.py  guards.py  integrator.py  issue_processor.py  models.py  notes.py  orchestrator.py  prompts.py  session.py  state.py  util.py  worker.py  worktree.py
tests/: conftest.py  test_cli.py  test_config.py  test_coordination.py  test_dashboard.py  test_errors.py  test_github.py  test_guards.py  test_integrator.py  test_issue_processor.py  test_models.py  test_notes.py  test_orchestrator.py  test_oversight.py  test_prompts.py  test_retry.py  test_session.py  test_state.py  test_util.py  test_worker.py  test_worktree.py
