[project]
name = "claude-swarm"
version = "0.1.0"
description = "Orchestration system for dynamic pools of Claude agents working autonomously on development tasks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "claude-agent-sdk>=0.0.25",
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
swarm = "claude_swarm.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_swarm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
